<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RozszerzoneFunkcjeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pierwszaCyfra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/cyfrajeden"
                android:inputType="number" />

            <EditText
                android:id="@+id/drugaCyfra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cyfradwa"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dodawanie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dp"
                android:text="@string/dodawanie" />

            <Button
                android:id="@+id/odejmowanie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dp"
                android:text="@string/odejmowanie" />

            <Button
                android:id="@+id/mnozenie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dp"
                android:text="@string/mnozenie" />

            <Button
                android:id="@+id/dzielenie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="18dp"
                android:text="@string/dzielenie" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wynik"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:hint="@string/wynik" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pierwiastkowanie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:text="@string/pierwiastkowanie" />

            <Button
                android:id="@+id/potegowanie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:text="@string/potegowanie" />

            <Button
                android:id="@+id/silnia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:layout_weight="1"
                android:text="@string/silnia" />

        </LinearLayout>

        <Button
            android:id="@+id/powrot"
            android:layout_width="118dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/powrot" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>